kubernetes/templates/kubernetes/apps/network/external-services/__TEMPLATE/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &app __APP_NAME
  labels:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
spec:
  ports:
    - name: http
      port: &port __SERVICE_PORT_NUMBER
      protocol: TCP
      targetPort: *port
  type: ClusterIP
